--- a/src/App.css
+++ b/src/App.css
@@ -13,17 +13,17 @@
   padding: 15px;
   text-align: center;
   transition: transform 0.2s;
-  display: flex; /* Set the card to use flexbox */
-  flex-direction: column; /* Arrange items vertically */
-  justify-content: space-between; /* Space between items, pushing the button to the bottom */
-  height: 100%; /* Ensure card takes full height to push button down */
+  display: flex; 
+  flex-direction: column; 
+  justify-content: space-between; 
+  height: 100%; 
 }
 
 .club-image {
   max-width: 100%;
   height: auto;
   border-radius: 4px;
-  flex-shrink: 0; /* Prevent the image from shrinking */
+  flex-shrink: 0; 
 }
 
 .club-card:hover {
@@ -34,16 +34,17 @@
   display: block;
   padding: 12px 25px;
   background-color: #212529;
-  color: #BA9B37;
+  color: #FFC904;
   text-decoration: none;
   border-radius: 5px;
   transition: background-color 0.3s, transform 0.3s;
   border: none;
   cursor: pointer;
-  margin-top: auto; /* Automatically push the button to the bottom */
+  margin-top: auto; 
 }
 
 .button:hover {
-  background-color: #333; /* Darker shade on hover */
-  transform: scale(1.05); /* Slightly scale the button for attention */
+  background-color: #BA9B37; /
+  transform: scale(1.05);
+  color: black;
 }
