--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,53 @@
 
+/* Clubs container layout */
 .clubs-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 30px;
-  padding: 20px;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 50px;
+  justify-content: center;
+}
+
+/* Club card styles */
+.club-card {
+  background-color: #ffffff;
+  border: 1px solid #FFC904; 
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 15px;
+  text-align: center;
+  transition: transform 0.2s;
+  display: flex; 
+  flex-direction: column; 
+  justify-content: space-between; 
+  height: 100%; 
+}
+
+/* Club image styles */
+.club-image {
+  max-width: 100%;
+  height: auto;
+  border-radius: 4px;
+  flex-shrink: 0; 
+}
+
+/* Button styles */
+.button {
+  display: block;
+  padding: 12px 25px;
+  background-color: #212529;
+  color: #FFC904;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s, transform 0.3s;
+  border: none;
+  cursor: pointer;
+  margin-top: auto; 
+}
+
+.button:hover {
+  background-color: #BA9B37;
+  transform: scale(1.05);
+  color: black;
 }
 
 .club-card {
