--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,7 @@
 }
 
 .button:hover {
-  background-color: #BA9B37; /
-  transform: scale(1.05);
+  background-color: #BA9B37; 
+  transform:scale(1.05);
   color: black;
 }
